--- a/Aplomb/Web.config
+++ b/Aplomb/Web.config
@@ -9,8 +9,8 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="Aplomb" connectionString="data source=localhost;initial catalog=Aplomb;integrated security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
-    <add name="DataModel" connectionString="metadata=res://*/Models.DataModel.csdl|res://*/Models.DataModel.ssdl|res://*/Models.DataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Aplomb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Aplomb" connectionString="data source=localhost;initial catalog=Aplomb;User ID=aplomb_test;Password=abcd1234!;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add name="DataModel" connectionString="metadata=res://*/Models.DataModel.csdl|res://*/Models.DataModel.ssdl|res://*/Models.DataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Aplomb;User ID=aplomb_test;Password=abcd1234!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
