Added several "constraint" fields onto Field table, replacing ExtraInfo xml field

--- a/Aplomb_Common/Aplomb_Common.csproj
+++ b/Aplomb_Common/Aplomb_Common.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Models\FieldType.cs">
       <DependentUpon>DataModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ReferenceValues.cs" />
     <Compile Include="Models\FieldValue.cs">
       <DependentUpon>DataModel.tt</DependentUpon>
     </Compile>
